Updated file.  Still hving issue with pixel overflow.  Now have random color in script.

--- a/pixel.css
+++ b/pixel.css
@@ -31,6 +31,7 @@ button{
   margin-right: auto;
   border-style: solid;
   border-width: thin;
+  font-size: 0px;
 }
 
 .grid {
@@ -41,9 +42,12 @@ button{
   padding-left: 0px;
   padding-right: 0px;
   padding-bottom: 0px;
-  margin-bottom: -4px;
+  margin-bottom: 0px;
+  height: 100%;
+  width: 100%;
+  border:0px;
   border: 0px;
-  background-color: #e2e2e2;
+  background-color: transparent;
   /*border-style: solid;
   border-width: 1px;*/
 }
